Them button Tim ban

--- a/lgbtconnection/www/templates/HomeTemplate.html
+++ b/lgbtconnection/www/templates/HomeTemplate.html
@@ -1,5 +1,14 @@
 <ion-view >
      <ion-content>
-    Home
+         <div class="row">
+             <div class="col"></div>
+         </div>  
+         <div class="row">
+             <div class="col">
+                 <button class="button button-positive icon-left ion-android-search">
+                    TÌM BẠN
+                 </button>
+             </div>
+         </div>             
      </ion-content>
 </ion-view>
