--- a/lgbtconnection/www/css/style.css
+++ b/lgbtconnection/www/css/style.css
@@ -82,3 +82,12 @@ body {
 .messages.other span {
   color: white;
   background-color: #007AFF; }
+
+.col {
+   height: 200px;
+   width: 50%;
+}
+.button {
+     width: 150px;
+     height: 30px;
+}
