--- a/lgbtconnection/www/templates/MainTemplate.html
+++ b/lgbtconnection/www/templates/MainTemplate.html
@@ -1,15 +1,15 @@
 <ion-view>
         <ion-tabs class="tabs-icon-top tabs-positive">
 
-          <ion-tab title="Home" icon="ion-home" href="#/tab/home">
+          <ion-tab title="Trang chính" icon="ion-android-home" href="#/tab/home">
             <ion-nav-view name="home-tab"></ion-nav-view>
           </ion-tab>
 
-          <ion-tab title="Friend" icon="ion-ios-information" href="#/tab/friend">
+          <ion-tab title="Bạn bè" icon="ion-android-contacts" href="#/tab/friend">
             <ion-nav-view name="friend-tab"></ion-nav-view>
           </ion-tab>
 
-          <ion-tab title="Setting" icon="ion-log-out" href="#/tab/setting">
+          <ion-tab title="Cài đặt" icon="ion-android-settings" href="#/tab/setting">
           <ion-nav-view name="setting-tab"></ion-nav-view>
           </ion-tab>
 
