Dieu chinh Home page, Friend page, Setting page

--- a/lgbtconnection/www/css/style.css
+++ b/lgbtconnection/www/css/style.css
@@ -83,11 +83,13 @@ body {
   color: white;
   background-color: #007AFF; }
 
-.col {
-   height: 200px;
-   width: 50%;
+.scroll-content {
+  display: table !important;
+  width: 100% !important;
+  height: 100% !important;
 }
-.button {
-     width: 150px;
-     height: 30px;
+.scroll {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 }
