--- a/lgbtconnection/www/templates/FriendTemplate.html
+++ b/lgbtconnection/www/templates/FriendTemplate.html
@@ -1,6 +1,24 @@
-<ion-view >
+<ion-view view-title="Bạn bè">
      <ion-content>
-    Friend
-    <a href="#/tab/chat/123">abc</a>
+     <div class="list card">
+        <a href="#/tab/chat/121">
+        <div class="item item-avatar">
+            <img src="../img/logo.png"> <!-- user.avt -->
+            <h2>Lê Tấn Phong</h2> <!-- user.name -->
+        </div>
+        </a>
+        <a href="#/tab/chat/122">
+        <div class="item item-avatar">
+            <img src="../img/logo.png"> <!-- user.avt -->
+            <h2>Pretty Hate Machine</h2> <!-- user.name -->
+        </div>
+        </a>
+        <a href="#/tab/chat/123">
+        <div class="item item-avatar">
+            <img src="../img/logo.png"> <!-- user.avt -->
+            <h2>Pretty Hate Machine</h2> <!-- user.name -->
+        </div>
+        </a>
+     </div>
      </ion-content>
 </ion-view>
