--- a/lgbtconnection/www/templates/HomeTemplate.html
+++ b/lgbtconnection/www/templates/HomeTemplate.html
@@ -1,14 +1,10 @@
-<ion-view >
-     <ion-content>
-         <div class="row">
-             <div class="col"></div>
-         </div>  
-         <div class="row">
-             <div class="col">
-                 <button class="button button-positive icon-left ion-android-search">
+<ion-view view-title="Trang chính">
+      <ion-content has-header="true" padding="true">
+        <div class="row">
+            <div class="col">
+                <button class="button button-positive icon-left icon ion-android-search">
                     TÌM BẠN
-                 </button>
-             </div>
-         </div>             
-     </ion-content>
+                </button>
+            </div>
+        </div>
 </ion-view>
