--- a/lgbtconnection/www/templates/SignInTemplate.html
+++ b/lgbtconnection/www/templates/SignInTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Sign-In">
+<ion-view view-title="Đăng nhập">
         <ion-content>
           <div class="list">
             <label class="item item-input">
