--- a/lgbtconnection/www/templates/SignUpTemplate.html
+++ b/lgbtconnection/www/templates/SignUpTemplate.html
@@ -24,6 +24,11 @@
                 <option>B</option>
                 <option>T</option>
             </select>
+            </label>            
+
+            <label class="item item-input">
+              <span class="input-label">Ngày sinh</span>
+              <input type="text" ng-model="user.date">
             </label>
           </div>
           <div class="padding">
