--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -1,29 +1,27 @@
 <ion-view view-title="Cài đặt">    
      <ion-content>
         <div class="card">
+        <a href="#/tab/profile/123">
         <div class="item item-avatar">
             <img src="../img/logo.png">
             <h2>Lê Tấn Phong</h2> <!-- user.name -->
             <p>31/02/2003</p> <!-- user,date -->
         </div>
+        </a>
         </div>
-         <button class="button button-block button-assertive icon-right icon ion-android-foward">
+         <button class="button button-block button-assertive icon-right icon ion-android-arrow-forward">
              Tên tài khoản
          </button>
          <div class="row"></div>
-         <button class="button button-block button-energized icon-right icon ion-android-foward">
+         <button class="button button-block button-energized icon-right icon ion-android-arrow-forward">
              Mật khẩu
          </button>
          <div class="row"></div>
-         <button class="button button-block button-balanced icon-right icon ion-android-foward">
-             Thông tin cá nhân
-         </button>
-         <div class="row"></div>
-         <button class="button button-block button-positive icon-right icon ion-android-foward">
+         <button class="button button-block button-balanced icon-right icon ion-android-arrow-forward">
              Về
          </button>
          <div class="row"></div>
-         <button class="button button-block button-royal icon-right icon ion-android-foward" ng-controller="signOutCtrl" ng-click="signOut(user)">
+         <button class="button button-block button-royal icon icon-right ion-android-arrow-forward">
              Đăng xuất
          </button>
      </ion-content>
