--- a/lgbtconnection/www/templates/SignInTemplate.html
+++ b/lgbtconnection/www/templates/SignInTemplate.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Đăng nhập">
         <ion-content>
+        <img class="img-circle" src="../img/logo.png">
+        <h1 class="signin_title">LGBTConnection</h1>
           <div class="list">
             <label class="item item-input">
               <span class="input-label">Email</span>
