--- a/lgbtconnection/www/templates/SignUpTemplate.html
+++ b/lgbtconnection/www/templates/SignUpTemplate.html
@@ -1,4 +1,4 @@
- <ion-view title="Sign-up">
+ <ion-view title="Đăng ký">
         <ion-content>
           <div class="list">
             <label class="item item-input"> 
