--- a/lgbtconnection/www/templates/SignInTemplate.html
+++ b/lgbtconnection/www/templates/SignInTemplate.html
@@ -11,6 +11,7 @@
               <span class="input-label">Mật khẩu</span>
               <input type="password" ng-model="user.password">
             </label>
+            <h6 style="color: red">{{ msg }}</h6>
           </div>
           <div class="padding">
             <button class="button button-block button-positive" ng-click="signIn(user)">
