--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -3,8 +3,8 @@
         <div class="card">
         <a href="#/tab/profile/123">
         <div class="item item-avatar">
-            <img src="../img/logo.png">
-            <h2>Lê Tấn Phong</h2> <!-- user.name -->
+            <img src="../img/logo.png" href="#/profile">
+            <h2 >Lê Tấn Phong</h2> <!-- user.name -->
             <p>31/02/2003</p> <!-- user,date -->
         </div>
         </a>
