Them dang nhap, dang ky, profile

--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Cài đặt">    
      <ion-content>
         <div class="card">
-        <a href="#/tab/profile/123">
+        <a href="#/tab/profile">
         <div class="item item-avatar">
             <img src="../img/logo.png" href="#/profile">
             <h2 >Lê Tấn Phong</h2> <!-- user.name -->
