Sua setting page

--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -4,21 +4,14 @@
         <a href="#/tab/profile">
         <div class="item item-avatar">
             <img src="../img/logo.png" href="#/profile">
-            <h2 >Lê Tấn Phong</h2> <!-- user.name -->
-            <p>31/02/2003</p> <!-- user,date -->
+            <h2>{{ user.name }}</h2> <!-- user.name -->
+            <p>{{ user.date }}</p> <!-- user,date -->
         </div>
         </a>
         </div>
-         <button class="button button-block button-assertive icon-right icon ion-android-arrow-forward">
-             Tên tài khoản
-         </button>
-         <div class="row"></div>
-         <button class="button button-block button-energized icon-right icon ion-android-arrow-forward">
-             Mật khẩu
-         </button>
          <div class="row"></div>
          <button class="button button-block button-balanced icon-right icon ion-android-arrow-forward">
-             Về
+             Câu hỏi
          </button>
          <div class="row"></div>
          <button class="button button-block button-royal icon icon-right ion-android-arrow-forward">
