--- a/lgbtconnection/www/templates/ProfileTemplate.html
+++ b/lgbtconnection/www/templates/ProfileTemplate.html
@@ -2,19 +2,28 @@
  <ion-content has-header="true">
       <div ></div>
       <div >
-        <div >
-          <img src="">
-          Nickname
-          <h3 id="profile-name"><a href="#" editable-text="user.name">{{ user.name || "empty" }}</a></h3>
-          Gender
-          <h4>{{ user.gender }}</h4>
-          Ngày sinh
-		      <h5><a href="#" editable-text="user.date">{{ (user.date | date: "dd-MM-yyyy") || 'empty' }}</a></h5>
-          Phương châm
-          <h4><a href="#" editable-text="user.slogan">{{ user.slogan || "empty" }}</a></h4>
-          Sở thích
-          <h4><a href="#" editable-text="user.hobby">{{ user.hobby || "empty" }}</a></h4>
-        </div>
+          <div >
+          <img class="img-circle" src="../img/logo.png">
+          <h3 id="profile-name" ><class="signin_title"><a href="#" editable-text="user.name">{{ user.name || "empty" }}</a></h3>
+          <ion-list>
+         <ion-item>
+        Ngày sinh 
+		<a href="#" editable-text="user.date">{{ (user.date | date: "dd-MM-yyyy") || 'empty' }}</a>
+         </ion-item>
+         <ion-item>
+            Phương châm 
+          <a href="#" editable-text="user.slogan">{{ user.slogan || "empty" }}</a>
+         </ion-item>
+         <ion-item>
+             Sở thích 
+          <a href="#" editable-text="user.hobby">{{ user.hobby || "empty" }}</a>
+          </ion-item>
+          <ion-item>
+            Gender 
+          <a href="#" editable-text="user.gender">{{  user.gender || "empty" }}</a>
+          </ion-item>
+          </ion-list>
+          </div>
       </div>
 </ion-content>
 </ion-view>
