--- a/lgbtconnection/www/templates/ProfileTemplate.html
+++ b/lgbtconnection/www/templates/ProfileTemplate.html
@@ -1,28 +1,29 @@
-<ion-view >
+<ion-view view-title="Thông tin cá nhân">
  <ion-content has-header="true">
-      <div ></div>
-      <div >
-          <div >
+      <div>
+          <div>
           <img class="img-circle" src="../img/logo.png">
-          <h3 id="profile-name" ><class="signin_title"><a href="#" editable-text="user.name">{{ user.name || "empty" }}</a></h3>
-          <ion-list>
-         <ion-item>
-        Ngày sinh 
-		<a href="#" editable-text="user.date">{{ (user.date | date: "dd-MM-yyyy") || 'empty' }}</a>
-         </ion-item>
-         <ion-item>
-            Phương châm 
-          <a href="#" editable-text="user.slogan">{{ user.slogan || "empty" }}</a>
-         </ion-item>
-         <ion-item>
-             Sở thích 
-          <a href="#" editable-text="user.hobby">{{ user.hobby || "empty" }}</a>
-          </ion-item>
-          <ion-item>
-            Gender 
-          <a href="#" editable-text="user.gender">{{  user.gender || "empty" }}</a>
-          </ion-item>
-          </ion-list>
+          <h1 id="profile-name" <class="signin_title"><a href="#" editable-text="user.name"> {{ user.name || "empty" }}</a></h1>
+          <div class="list">
+                <div class="item item-icon-left">
+                    <i class="icon ion-calendar"> </i>
+                    Ngày sinh: <a href="#" editable-text="user.date" > {{ (user.date | date: "dd-MM-yyyy") || 'empty' }}</a>
+                </div>
+                <div class="item item-icon-left">
+                    <i class="icon ion-speakerphone" > </i>
+                     Phương châm: <a href="#" editable-text="user.slogan"> {{ user.slogan || "empty" }}</a>
+                </div>
+                 <div class="item item-icon-left">
+                    <i class="icon ion-thumbsup"> </i>
+                       Sở thích: <a href="#" editable-text="user.hobby"> {{ user.hobby || "empty" }}</a>
+                </div>
+                <div class="item item-icon-left">
+                    <i class="icon ion-transgender"> </i>
+                        Gender: {{  user.gender || "empty" }}
+                </div>
+                  
+
+         </div>
           </div>
       </div>
 </ion-content>
