--- a/lgbtconnection/www/templates/FriendTemplate.html
+++ b/lgbtconnection/www/templates/FriendTemplate.html
@@ -1,26 +1,27 @@
 <ion-view view-title="Bạn bè">
-     <ion-content>
-     <div class="list card">
+    <ion-content padding="true" class="has-header">
+     <div class="list">
         <a href="#/tab/chat/121">
         <div class="item item-avatar">
             <img src="../img/logo.png"> <!-- user.avt -->
             <h2>Lê Tấn Phong</h2> <!-- user.name -->
+            <p>Back off, man. I'm a scientist.</p>
         </div>
         </a>
         <a href="#/tab/chat/122">
         <div class="item item-avatar">
             <img src="../img/logo.png"> <!-- user.avt -->
             <h2>Pretty Hate Machine</h2> <!-- user.name -->
+            <p>Back off, man. I'm a scientist.</p>
         </div>
         </a>
         <a href="#/tab/chat/123">
         <div class="item item-avatar">
             <img src="../img/logo.png"> <!-- user.avt -->
             <h2>Pretty Hate Machine</h2> <!-- user.name -->
+            <p>Back off, man. I'm a scientist.</p>
         </div>
         </a>
      </div>
-
-     </ion-content>
-
+    </ion-content>
 </ion-view>
