--- a/lgbtconnection/www/templates/HomeTemplate.html
+++ b/lgbtconnection/www/templates/HomeTemplate.html
@@ -2,7 +2,7 @@
       <ion-content has-header="true" padding="true">
         <div class="row">
             <div class="col">
-                <button class="button button-positive icon-left icon ion-android-search">
+                <button class="button button-positive icon-left icon ion-android-search" ng-click="findFriend()">
                     TÌM BẠN
                 </button>
             </div>
