--- a/lgbtconnection/www/templates/SignUpTemplate.html
+++ b/lgbtconnection/www/templates/SignUpTemplate.html
@@ -23,10 +23,10 @@
             <label class = "item item-input item-select">
             <div class = "input-label">Giới tính</div>	
             <select ng-model="user.gender">
-                <option>Lesbian</option>
-                <option>Gay</option>
-                <option>Bisexual</option>
-                <option>Transgender</option>
+                <option>Đồng tính nữ</option>
+                <option>Đồng tính nam</option>
+                <option>Song tính luyến ái</option>
+                <option>Người chuyển giới</option>
             </select>
             </label>            
 
