doi thanh tieng viet

--- a/lgbtconnection/www/templates/ProfileTemplate.html
+++ b/lgbtconnection/www/templates/ProfileTemplate.html
@@ -19,10 +19,8 @@
                 </div>
                 <div class="item item-icon-left">
                     <i class="icon ion-transgender"> </i>
-                        Gender: {{  user.gender || "empty" }}
+                        Giới tính : {{  user.gender || "empty" }}
                 </div>
-                  
-
          </div>
           </div>
       </div>
