--- a/lgbtconnection/www/templates/ChatTemplate.html
+++ b/lgbtconnection/www/templates/ChatTemplate.html
@@ -9,10 +9,10 @@
     </ion-content>
     <ion-footer-bar keyboard-attach class="bar-stable item-input-inset">
         <label class="item-input-wrapper">
-            <input type="text" placeholder="Type your message" on-return="sendMessage();" ng-model="data.message" on-focus="inputUp()" on-blur="inputDown()" focus-on-blur="focusManager.focusInputOnBlur" />
+            <input type="text" placeholder="Nhập tin nhắn" on-return="sendMessage();" ng-model="data.message" on-focus="inputUp()" on-blur="inputDown()" focus-on-blur="focusManager.focusInputOnBlur" />
         </label>
         <button class="button button-clear" ng-disabled="!data.message || data.message === ''" ng-click="sendMessage()">
-            Send
+            Gửi
         </button>
     </ion-footer-bar>
 </ion-view>
