Them button sign out

--- a/lgbtconnection/www/templates/HomeTemplate.html
+++ b/lgbtconnection/www/templates/HomeTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Trang chính">
+<ion-view view-title=" {{ user.name }} ">
       <ion-content has-header="true" padding="true">
         <div class="row">
             <div class="col">
