--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -14,7 +14,7 @@
              Câu hỏi
          </button>
          <div class="row"></div>
-         <button class="button button-block button-royal icon icon-right ion-android-arrow-forward">
+         <button class="button button-block button-royal icon icon-right ion-android-arrow-forward" ng-click="signOut()">
              Đăng xuất
          </button>
      </ion-content>
