Add duoc list_chat nhung k load dc Chattemplate

--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -5,7 +5,7 @@
         <div class="item item-avatar">
             <img src="../img/logo.png" href="#/profile">
             <h2>{{ user.name }}</h2> <!-- user.name -->
-            <p>{{ user.date }}</p> <!-- user,date -->
+            <p>{{ user.date }}</p> <!-- user.date -->
         </div>
         </a>
         </div>
