--- a/lgbtconnection/www/css/style.css
+++ b/lgbtconnection/www/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-  cursor: url('http://ionicframework.com/img/finger.png'), auto;
+  cursor: url('../img/finger.png'), auto;
 }
 
 /* allows the bar-footer to be elastic /*
