--- a/lgbtconnection/www/templates/ChatTemplate.html
+++ b/lgbtconnection/www/templates/ChatTemplate.html
@@ -1,6 +1,6 @@
  <ion-view view-title=" {{ user.name }} " class="messaging-view">
     <ion-content padding="true" class="content-stable">
-        <div collection-repeat="message in arr"
+        <div collection-repeat="message in messages"
         ng-class="{other: message.id == uid}"
              class="messages">
             <div class="message" ng-class="{'slide-right': showTime, '': !showTime}">
