--- a/lgbtconnection/www/css/style.css
+++ b/lgbtconnection/www/css/style.css
@@ -121,3 +121,21 @@ border-radius: 4px;
 .input-label{
   text-align: left;
 }
+
+.header .col {
+  background-color:lightgrey;
+}
+
+.col {
+  border: solid 1px grey;
+  border-bottom-style: none;
+  border-right-style: none;
+}
+
+.col:last-child {
+  border-right: solid 1px grey;
+}
+
+.row:last-child .col {
+  border-bottom: solid 1px grey;
+}
