--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Cài đặt">    
+<ion-view view-title="Cài đặt" class="middle_full">    
      <ion-content>
         <div class="card">
         <a href="#/tab/profile">
