--- a/lgbtconnection/www/templates/SignInTemplate.html
+++ b/lgbtconnection/www/templates/SignInTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Đăng nhập">
+<ion-view view-title="Đăng nhập" class="middle_full">
         <ion-content>
         <img class="img-circle" src="../img/logo.png">
         <h1 class="signin_title">LGBTConnection</h1>
