--- a/lgbtconnection/www/css/style.css
+++ b/lgbtconnection/www/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   cursor: url('../img/finger.png'), auto;
 }
@@ -85,13 +84,7 @@ body {
   background-color: #007AFF; }
 
 .scroll-content {
-  display: table !important;
-  width: 100% !important;
-  height: 100% !important;
-}
-.scroll {
-  display: table-cell;
-  vertical-align: middle;
+  top: 10 !important;
   text-align: center;
 }
 
@@ -156,4 +149,16 @@ border-radius: 4px;
 }
 #button-add {
   margin-right: 0px
+}
+
+.middle_full .scroll-content {
+  display: table !important;
+  width: 100% !important;
+  height: 100% !important;
+  margin-top: -50px; /* the height of the centered content */
+  text-align: center;
+}
+.middle_full .scroll {
+  display: table-cell;
+  vertical-align: middle;
 }
