--- a/lgbtconnection/www/templates/ProfileTemplate.html
+++ b/lgbtconnection/www/templates/ProfileTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Thông tin cá nhân">
+<ion-view view-title="Thông tin cá nhân" class="middle_full">
  <ion-content has-header="true">
       <div>
           <div>
