--- a/lgbtconnection/www/templates/FriendTemplate.html
+++ b/lgbtconnection/www/templates/FriendTemplate.html
@@ -4,7 +4,7 @@
      <div ng-repeat="friend in list_friend">
             <a ng-href="#/tab/chat/{{friend.id}}" >
             <div class="item item-avatar">
-                <img src="../img/logo.png"> <!-- user.avt -->
+                <img src="/android_asset/www/img/logo.png"> <!-- user.avt -->
                 <h2>{{ friend.name }}</h2> <!-- user.name -->
             </div>
             </a>
