--- a/lgbtconnection/www/templates/HomeTemplate.html
+++ b/lgbtconnection/www/templates/HomeTemplate.html
@@ -5,6 +5,7 @@
                 <button class="button button-positive icon-left icon ion-android-search" ng-click="findFriend()">
                     TÌM BẠN
                 </button>
+                <h6 style="color: blue">{{ msg }}</h6>
             </div>
         </div>
 </ion-view>
