--- a/lgbtconnection/www/templates/ProfileTemplate.html
+++ b/lgbtconnection/www/templates/ProfileTemplate.html
@@ -2,7 +2,7 @@
  <ion-content has-header="true">
       <div>
           <div>
-          <img class="img-circle" src="../img/logo.png">
+          <img class="img-circle" src="/android_asset/www/img/logo.png">
           <h1 id="profile-name" <class="signin_title"><a href="#" editable-text="user.name"> {{ user.name || "empty" }}</a></h1>
           <div class="list">
                 <div class="item item-icon-left">
