--- a/lgbtconnection/www/templates/SettingTemplate.html
+++ b/lgbtconnection/www/templates/SettingTemplate.html
@@ -3,7 +3,7 @@
         <div class="card">
         <a href="#/tab/profile">
         <div class="item item-avatar">
-            <img src="../img/logo.png" href="#/profile">
+            <img src="/android_asset/www/img/logo.png" href="#/profile">
             <h2>{{ user.name }}</h2> <!-- user.name -->
             <p>{{ user.date }}</p> <!-- user.date -->
         </div>
