--- a/lgbtconnection/www/templates/ChatTemplate.html
+++ b/lgbtconnection/www/templates/ChatTemplate.html
@@ -1,4 +1,4 @@
- <ion-view view-title="{{ friendname }}" class="messaging-view"> 
+ <ion-view view-title="Trò chuyện" class="messaging-view"> 
     <ion-content padding="true" class="content-stable" style="padding-bottom: 50px">
         <div collection-repeat="message in messages"
         ng-class="{other: message.id == uid}"
