--- a/lgbtconnection/www/templates/AnswermatchTemplate.html
+++ b/lgbtconnection/www/templates/AnswermatchTemplate.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Câu hỏi" class="middle_full">          
     <ion-content padding="true" has-header="true">
         <div>
-        <h2> Chọn đáp án đúng để kết nối</h2>
+        <h2> Chọn đáp án đúng để kết nối với {{ msg }}</h2> 
         <div ng-repeat="item in questions.list_ques" ng-init="id_question = $index">
                 <span editable-text="item.ques" e-name="ques" e-form="rowform">
                  <h3> {{ item.ques || 'empty' }}  </h3>
