--- a/lgbtconnection/www/templates/QuestionTemplate.html
+++ b/lgbtconnection/www/templates/QuestionTemplate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Câu hỏi" class="middle_full">          
+<ion-view view-title="Thiết lập câu hỏi" class="middle_full">          
     <ion-content padding="true" class="has-header">
         <div class="row header">
           <div class="col col-60">Câu hỏi</div>
