--- a/lgbtconnection/www/templates/SignUpTemplate.html
+++ b/lgbtconnection/www/templates/SignUpTemplate.html
@@ -1,4 +1,4 @@
- <ion-view title="Đăng ký" class="middle_full">
+ <ion-view title="Đăng kí" class="middle_full">
         <ion-content>
           <div class="list">
             <label class="item item-input">
